# caliper

./: .gitignore  README.md  pyproject.toml
caliper/: cli.py  config.py  llm.py
caliper/core/: agent.py  executor.py  logstore.py  remote_executor.py
caliper/web/: server.py
caliper/web/static/: index.html
docs/: WEB.md
tests/: test_executor_guard.py  test_web.py
